--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
